@@ -994,27 +994,24 @@ void GlCanvas::initializeGL()
 	}
 	d->initialized = true;
 
-#ifndef __EMSCRIPTEN__
+#ifdef CANVAS_IMPLEMENTATION_FALLBACK
 	// Calling OpenGL functions can crash if the driver is sufficiently bad.
 	// Set it to the default renderer temporarily so the user doesn't get stuck.
 	desktop::settings::Settings *settings = nullptr;
 	int originalRenderCanvas = -1;
 	if(dpApp().isCanvasImplementationFromSettings()) {
-		constexpr int DEFAULT_RENDER_CANVAS =
-			int(libclient::settings::CanvasImplementation::Default);
+		constexpr int fallback = int(CANVAS_IMPLEMENTATION_FALLBACK);
 		settings = &dpApp().settings();
 		originalRenderCanvas = settings->renderCanvas();
-		if(originalRenderCanvas == DEFAULT_RENDER_CANVAS) {
+		if(originalRenderCanvas == fallback) {
 			qCWarning(
-				lcDpGlCanvas,
-				"Canvas implementation is already set to the default %d",
-				DEFAULT_RENDER_CANVAS);
+				lcDpGlCanvas, "Canvas implementation is already set to %d",
+				fallback);
 		} else {
 			qCDebug(
-				lcDpGlCanvas,
-				"Reverting canvas implementation from %d to default %d",
-				originalRenderCanvas, DEFAULT_RENDER_CANVAS);
-			settings->setRenderCanvas(DEFAULT_RENDER_CANVAS);
+				lcDpGlCanvas, "Reverting canvas implementation from %d to %d",
+				originalRenderCanvas, fallback);
+			settings->setRenderCanvas(fallback);
 			settings->trySubmit();
 		}
 	}
@@ -1121,7 +1118,7 @@ void GlCanvas::initializeGL()
 
 	d->dirty = Private::Dirty();
 
-#ifndef __EMSCRIPTEN__
+#ifdef CANVAS_IMPLEMENTATION_FALLBACK
 	if(settings && originalRenderCanvas >= 0) {
 		qCDebug(
 			lcDpGlCanvas, "Restoring canvas implementation to %d",
